--- a/dev/brand-large.pug
+++ b/dev/brand-large.pug
@@ -9,7 +9,7 @@ block variables
 block content
   main.page-content
       .page-inner.page-inner--w1.page-inner--mobile_empty
-        include modules/filter-large
+        include modules/filter
       .page-inner.page-inner--w2 
         include modules/catalog-large 
         
