--- a/dev/brand.pug
+++ b/dev/brand.pug
@@ -10,7 +10,7 @@ block content
   main.page-content
       .page-inner.page-inner--w1.page-inner--mobile_empty
         include modules/filter
-        include modules/filter-rezult-not-found
+        //- include modules/filter-rezult-not-found
       .page-inner.page-inner--w2 
         include modules/catalog 
       .page-inner--w1.page-inner.hidden-x
