--- a/dev/card.pug
+++ b/dev/card.pug
@@ -19,7 +19,7 @@ block content
             .catalog
               include modules/slider-you-also-like
 
-        //- include modules/slider-prev-watched 
+        include modules/slider-prev-watched 
 
 block footer-popups 
   include modules/popups/change-color-popup   
