--- a/dev/css/project.css
+++ b/dev/css/project.css
@@ -291,6 +291,8 @@ body {
 .header-logo img {
   display: block;
   width: 100%;
+  position: relative;
+  z-index: 10000;
 }
 
 .header-search-holder {
