--- a/dev/modules/four-cards.pug
+++ b/dev/modules/four-cards.pug
@@ -1,11 +1,12 @@
-section.section
-  .title-block Завершите свой образ
-  .gallery.content__gallery
-    .gallery__item.gallery__item__2x
-      img(src='../dummy/catalog/c3.jpg' alt='')
+block variables
+  - var activeLink = 'color-beg'
+  - var activeLink1 = 'color-violet'
 
-    each look in looks
-      .gallery__item.d-none.d-md-block
+#catalog-items
+  .catalog-items.row(data-params='')
+
+    each item in items
+      .col-6.col-lg-3
         .catalog-item.w2
           .slider-arrows
             span.catalog-item-slider-arrow.prev
@@ -18,52 +19,32 @@ section.section
                 path(d='M21.332 13C21.6082 13 21.832 12.7761 21.832 12.5C21.832 12.2239 21.6082 12 21.332 12L21.332 13ZM4.66537 12C4.38923 12 4.16537 12.2239 4.16537 12.5C4.16537 12.7761 4.38922 13 4.66537 13L4.66537 12ZM21.332 12L4.66537 12L4.66537 13L21.332 13L21.332 12Z' fill='#1D1D1D')
                 path(d='M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z' fill='#1D1D1D')
                 path(d='M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z' fill='#1D1D1D')
+
           .catalog-item-photo-holder.catalog-item-slider(data-params='{"slidesToShow": 1, "slidesToScroll": 1, "infinite": true}')
-            img(src=`../dummy/catalog/${look.image}`)
+            img(src=`../dummy/catalog/${item.image}`)
+            img(src='../dummy/catalog/c21.jpg')
             img(src='../dummy/catalog/c22.jpg')
             img(src='../dummy/catalog/c23.jpg')
             img(src='../dummy/catalog/c24.jpg')
-            img(src='../dummy/catalog/c25.jpg')
-          //- .catalog-item-photo-holder
-          //-   img.cover(src=`../dummy/catalog/${look.image}` alt='')
           include card-sizes-block
+          .catalog-item-title 
+            dev
+              .catalog-item-title-title= item.name
+              .catalog-item-price= item.price + ' РУБ'
+                .catalog-item-labels
+                  .catalog-item-label.black Хит               
 
-          .catalog-item-title= look.name
-            .order-table__color
-              +color(dataTableColorItem1, activeLink1, '3')
+            .catalog-item-color +3 цвета
+            +color(dataTableColorItem3, activeLink1, 3)
 
-          .catalog-item-price= look.price + ' РУБ'
           a.catalog-item-link(href='card.html')
-          a.catalog-item-like(href='#fav-add-popup' data-popup='{"type":"inline"}') 
-
-      .gallery__item.gallery__item-mobile.d-block.d-md-none
-        .catalog-item.catalog-item__mobile.w2
-          
-            .gallery__item-mobile-col
-              .catalog-item-photo-holder.catalog-item-slider
-                img(src=`../dummy/catalog/${look.image}`)
-              a.catalog-item-link(href='card.html')
-              a.catalog-item-like(href='#fav-add-popup' data-popup='{"type":"inline"}')   
-
-            .gallery__item-mobile-col
-              span     
-                .catalog-item-title= look.name
-                .catalog-item-price= look.price + ' РУБ'
-              span
-                a.link.link--black_border.link-add-basket(href='#change-color-popup' data-popup='{"type":"inline"}') +2 цвета 
-              span       
-                a.link.link--black_border.link-add-basket(href='#change-size-popup' data-popup='{"type":"inline"}') Добавить в корзину 
-
-
-
-  .complite-look__info
-    .complite-look__text
-      span.nowrap Товары в образе:
-      span.nowrap Брюки 6 500 P,
-      span.nowrap Топ 14 800 P,
-      span.nowrap Жакет 12 500 P.
-    .complite-look__by-all
-      | Купить все за 29 800 P
-    //- a.btn.btn--black.btn--medium.btn--fullwidth.basket-open(href='#auth-form' data-popup='{"type":"inline"}')
-    a.btn.btn--black.btn--medium.btn--fullwidth(href='#size-popup' data-popup='{"type":"inline"}')
-      | ДОБАВИТЬ В КОРЗИНУ 
+          button.catalog-item-like(type='button')   
+        //- картинка без слайдера         
+        //- .catalog-item.wo-holder
+        //-         img.cover(src=`../../dummy/catalog/${item.image}`)
+        //-     .catalog-item-title= item.name
+        //-         .catalog-item-color +2 цвета
+        //-     .catalog-item-price
+        //-         b= item.price + ' РУБ'
+        //-     a.catalog-item-link(href='#')
+        //-     button.catalog-item-like(type='button')  
