--- a/dev/modules/slider-you-also-like.pug
+++ b/dev/modules/slider-you-also-like.pug
@@ -1,4 +1,4 @@
-.catalog
+.catalog.slider-you-also-like
   .row.justify-content-between.align-items-center
     .col-auto
       .title-block Вам также может понравиться
@@ -6,7 +6,7 @@
     .d-none.d-lg-block
       include four-cards
 
-  .catalog-items.row.catalog-items--slider.mlr--20px.d-block.d-lg-none
+  .catalog-items.row.catalog-items--slider.mlr-sm--20px.d-block.d-lg-none
 
     each item in fourCards
       .col-md-2
