--- a/project-ann.css
+++ b/project-ann.css
@@ -1225,6 +1225,7 @@ a.basket-menu__link_lowercase {
 
 @media screen and (max-width: 480px) {
   .catalog-items--slider.mlr-sm--20px {
+    border: 1px solid green;
     margin-left: -20px !important;
     margin-right: -20px !important;
   }
@@ -1390,6 +1391,7 @@ a.basket-menu__link_lowercase {
 
 /*** //Catalog ***/
 .catalog {
+  border: 1px solid red !important;
   position: relative;
 }
 .catalog .slider-arrows-wrap {
@@ -1402,6 +1404,7 @@ a.basket-menu__link_lowercase {
 }
 @media screen and (max-width: 1660px) {
   .catalog .slider-arrows-wrap {
+    border: 1px solid red !important;
     max-width: calc(100% + 60px);
     top: calc(50% - 20px);
     z-index: 1;
@@ -5084,15 +5087,6 @@ ul.footer-top__list {
   .big-grid__item-one-center .catalog-item.w2 .order-table__color,
 .big-grid__item-double-center .catalog-item.w2 .order-table__color {
     right: 15px;
-  }
-}
-.slider-prev-watched .title-block {
-  margin-left: 15px;
-}
-
-@media screen and (max-width: 960px) {
-  .slider-you-also-like .title-block {
-    margin-left: 15px;
   }
 }
 .section {
