--- a/static_/css/project-ann.css
+++ b/static_/css/project-ann.css
@@ -1223,12 +1223,11 @@ a.basket-menu__link_lowercase {
   font-weight: normal;
 }
 
-@media screen and (max-width: 480px) {
-  .catalog-items--slider.mlr-sm--20px {
-    margin-left: -20px !important;
-    margin-right: -20px !important;
-  }
+.catalog-items--slider.mlr--20px {
+  margin-left: -20px;
+  margin-right: -20px;
 }
+
 .catalog-items--slider {
   margin-bottom: 0;
 }
@@ -1390,6 +1389,7 @@ a.basket-menu__link_lowercase {
 
 /*** //Catalog ***/
 .catalog {
+  border: 1px solid red !important;
   position: relative;
 }
 .catalog .slider-arrows-wrap {
@@ -1402,6 +1402,7 @@ a.basket-menu__link_lowercase {
 }
 @media screen and (max-width: 1660px) {
   .catalog .slider-arrows-wrap {
+    border: 1px solid red !important;
     max-width: calc(100% + 60px);
     top: calc(50% - 20px);
     z-index: 1;
@@ -1626,6 +1627,10 @@ a.basket-menu__link_lowercase {
     padding-left: 2.5px;
   }
 }
+.catalog .slider-prev-watched {
+  border: 1px solid red;
+}
+
 .page-note {
   padding: 10px 0;
   background-color: #F7F5F5;
@@ -5084,15 +5089,6 @@ ul.footer-top__list {
   .big-grid__item-one-center .catalog-item.w2 .order-table__color,
 .big-grid__item-double-center .catalog-item.w2 .order-table__color {
     right: 15px;
-  }
-}
-.slider-prev-watched .title-block {
-  margin-left: 15px;
-}
-
-@media screen and (max-width: 960px) {
-  .slider-you-also-like .title-block {
-    margin-left: 15px;
   }
 }
 .section {
