--- a/dev/scss/blocks/_catalog.scss
+++ b/dev/scss/blocks/_catalog.scss
@@ -366,6 +366,7 @@
   .catalog-items--slider.mlr-sm--20px { 
     margin-left: -20px !important;
     margin-right: -20px !important;
+    padding-left: 20px;
   }
 }
 
