--- a/dev/css/project-ann.scss
+++ b/dev/css/project-ann.scss
@@ -46,14 +46,17 @@
 
 
 
-.slider-prev-watched .title-block {
-  margin-left: 15px;
-}
-
-@media screen and (max-width:960px) {
-  .slider-you-also-like .title-block {
+// выравнивание заголовков блоков 'Вам также может понравиться' и 'Ранее вы смотрели' на стр card.html
+@media screen and (min-width:960px) {
+  .slider-prev-watched .title-block { 
     margin-left: 15px;
   } 
+}
+@media screen and (max-width:960px) {
+  .slider-prev-watched .title-block,
+  .slider-you-also-like .title-block { 
+    margin-left: 5px;
+  }  
 }
 
 
