--- a/dev/modules/menus/basket-menu.pug
+++ b/dev/modules/menus/basket-menu.pug
@@ -8,7 +8,7 @@
           a.basket__title-link-clean-basket(href='#') Очистить корзину
         .basket-mobile-menu__body.simplebar
           include ../basket/items-in-cart
-          include ../basket/watching-with
+          //- include ../basket/watching-with
       .basket-mobile-menu__footer
         .basket-mobile-menu__footer-links
           .basket__title-link 4 Товара на сумму
