--- a/dev/modules/menus/size-menu.pug
+++ b/dev/modules/menus/size-menu.pug
@@ -31,10 +31,10 @@
                   .size-item-title XL
               label(data-tab='#size-tabs_six' data-tabs='.size-tab')
                 .size-item-content
-                  .size-item-title Рост H1
+                  .size-item-title Рост&nbsp;H1
               label(data-tab='#size-tabs_seven' data-tabs='.size-tab')
                 .size-item-content
-                  .size-item-title Рост H2
+                  .size-item-title Рост&nbsp;H2
             .tabs-content
               #size-tabs_one.tab-content-item.size-tab.active
                 .table-size
