--- a/dev/scss/blocks/_basket.scss
+++ b/dev/scss/blocks/_basket.scss
@@ -44,7 +44,11 @@
 
 
 
-.basket-inner {
+.basket-inner { 
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
     padding: 40px 20px 20px 40px;
     max-width: 566px;
 
