--- a/dev/scss/blocks/_page-note.scss
+++ b/dev/scss/blocks/_page-note.scss
@@ -7,7 +7,7 @@
 		font-weight: 200;
 		font-size: 14px;
 		line-height: 20px;
-		color: #1D1D1D;
+		color: $color-black;
 		text-align: center;
 	}
 	.page-note-close {
