--- a/dev/utils/data.pug
+++ b/dev/utils/data.pug
@@ -221,7 +221,7 @@
 //- стр: card.html      
 - 
   const BasketProductsMenuWatchWith = [
-    {img: 'c2.jpg', title: 'БРЮКИ', price: '6 500', size: 'S', color: 'коричневый', colors: 'коричневый'},
+    //- {img: 'c2.jpg', title: 'БРЮКИ', price: '6 500', size: 'S', color: 'коричневый', colors: 'коричневый'},
     {img: 'c9.jpg', title: 'БРЮКИ', price: '15 900', size: '41', color: 'коричневый'},
     ]
 
