--- a/dev/css/project.responsive.scss
+++ b/dev/css/project.responsive.scss
@@ -627,10 +627,7 @@ body .mobile-nav-menu-item-holder.open:before {
     display: block;
     padding-top: 15px;
   }
-  .breadcrumbs {
-    margin-top: -30px;
-    margin-bottom: 40px;
-  }
+
   .page-section {
     padding: 50px 0;
   }
@@ -785,6 +782,11 @@ body .mobile-nav-menu-item-holder.open:before {
   .product .product-info {
     padding: 25px 8px 0 8px;
     font-size: 16px;
+
+    @media screen and (max-width:480px) {
+      padding: 25px 0 0 0;
+    }
+
   }
   .product .product-info .product-colors .product-color {
     width: 24%;
