--- a/dev/scss/blocks/_basket-menu.scss
+++ b/dev/scss/blocks/_basket-menu.scss
@@ -12,7 +12,7 @@
     max-width: 566px;
     min-height: 100vh;
     width: 100%;
-    z-index: 1000;
+    z-index: 10000;
     transition: right .3s;
 
     background: #fff;
@@ -215,12 +215,16 @@ a.basket-menu__link_lowercase {
 
 /* ---------------- */
 
-.basket__title-link {
+.basket__title-link { 
     color: $color-black;
     text-decoration: none;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 20px;
+
+    @media screen and (max-width:480px) {
+        font-size: 14px;
+    }
 }
 
 .basket__title-link-clean-basket {
@@ -260,11 +264,15 @@ a.basket-menu__link_lowercase {
     justify-content: space-between;
     align-items: baseline;
     margin-bottom: 20px;
-    padding: 0 0 0 20px;
+    padding: 0;
 
     @media screen and (max-width:768px) {
         flex-direction: column;
         gap: 10px;
+    }
+    @media screen and (max-width:480px) {
+        padding: 0;
+        row-gap: 10px;
     }
 }
 
