--- a/dev/scss/blocks/_complete-look.scss
+++ b/dev/scss/blocks/_complete-look.scss
@@ -19,6 +19,11 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+
+        @media screen and (max-width:480px) {
+            font-size: 12px;
+        }
+
     }
 
     &__by-all {
