--- a/dev/scss/blocks/_size-menu.scss
+++ b/dev/scss/blocks/_size-menu.scss
@@ -8,7 +8,7 @@
     max-width: 566px;
     min-height: 100vh;
     width: 100%;
-    z-index: 10;
+    z-index: 10000;
     transition: right 0.3s;
     background: #fff;
     padding: 10px 0;
@@ -37,13 +37,15 @@
 }
 
 .size-menu__title {
-    text-align: center;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
     line-height: 25px;
     margin-bottom: 5px;
-    margin: auto; 
+
+    @media screen and (max-width:480px) {
+        font-size: 14px;
+    }
 }
 .size-menu__title_left {
     text-align: left;
@@ -51,11 +53,14 @@
 }
 
 .size-menu__text {
-    text-align: center;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     margin-bottom: 20px;
+
+    @media screen and (max-width:480px) {
+        font-size: 12px;
+    }
 }
 .size-item-content {
     padding: 0 10px;
@@ -85,6 +90,11 @@
 .size-menu__body {
     height: 100%;
     overflow-y: auto;
+}
+
+// проблеммы при стилизации скрола через js 
+.size-menu__img { 
+    width: 100%;
 }
 
 
