--- a/dev/modules/filters/filter-shops-map.pug
+++ b/dev/modules/filters/filter-shops-map.pug
@@ -16,6 +16,6 @@ block variables
 
     ul.filters-list-small
         li
-          span.active Список
+          a(href='shops.html') Список
         li
-          a(href='shop-map.html') На карте
+          span.active На карте
