--- a/dev/modules/filters/filterLarge.pug
+++ b/dev/modules/filters/filterLarge.pug
@@ -29,9 +29,9 @@
   div
     ul.filters-list-small
       li
-        a(href='brand-large.html') Крупно
+         span.active Крупно
       li
-        span.active Мелко
+         a(href='brand.html') Мелко
 
 
 
