--- a/dev/modules/popups/mobile-filter.pug
+++ b/dev/modules/popups/mobile-filter.pug
@@ -26,7 +26,7 @@
                 .mobile-filter-item-heading-toggler
               include ../filter-materials-block 
               .mobile-filter-item-content
-            .mobile-filter-item
+            .mobile-filter-item.mobile-filter-item--size
               .mobile-filter-item-heading
                 .mobile-filter-item-heading-title Размер
                 .mobile-filter-item-heading-toggler
