--- a/dev/brand.pug
+++ b/dev/brand.pug
@@ -2,14 +2,14 @@
 extends layout/main
 
 block variables
-  - var title = 'brand 1111'
+  - var title = 'brand'
   - var mainPage = false
 
 
 block content
   main.page-content
       .page-inner.page-inner--w1.page-inner--mobile_empty
-        include modules/filter
+        include modules/filters/filter
         //- include modules/filter-rezult-not-found
       .page-inner.page-inner--w2 
         include modules/catalog 
