--- a/dev/css/project.scss
+++ b/dev/css/project.scss
@@ -310,7 +310,11 @@ body {
   display: block;
   width: 100%;
   position: relative;
-  z-index: 10000;
+  z-index: 100;
+}
+
+header .header-logo img { 
+  z-index: 100000;
 }
 
 .header-search-holder {
