--- a/dev/modules/menus/header-menu.pug
+++ b/dev/modules/menus/header-menu.pug
@@ -20,7 +20,8 @@
             span Поиск
     .header-menu__center
       a.header-logo(href='http://brusnika.ruformat.ru/')
-        img(src='../svg/header_logo.svg' alt='')
+        img(src='../svg/header_logo.png' alt='')
+        //- img(src='../svg/header_logo.svg' alt='')
     .header-menu__right
       ul.header-menu__list
         li.header-menu__item.header-menu__item_search.catalog-search-open.only-desktop_header-menu
