edits for brand-large page

--- a/dev/brand-large.pug
+++ b/dev/brand-large.pug
@@ -8,12 +8,12 @@ block variables
 
 block content
   main.page-content
-      .page-inner.page-inner--w1.page-inner--mobile_empty
-        include modules/filters/filterLarge
-      .page-inner.page-inner--w2 
-        include modules/catalog-large 
-        
-      .page-inner--w1.page-inner.hidden-x
-        .page-inner.page-inner--w2
-          .catalog
-            include modules/slider-prev-watched
+    .page-inner.page-inner--w1.page-inner--mobile_empty
+      include modules/filters/filterLarge
+    .page-inner.page-inner--w2 
+      include modules/catalog-large 
+
+      //- .big-grid
+      //-  .big-grid__item-double-center 
+      //-   .catalog
+      //-     include modules/slider-prev-watched      
