--- a/dev/css/project-ann.css
+++ b/dev/css/project-ann.css
@@ -152,7 +152,7 @@
     margin: 0 15px;
   }
   .header-menu__left {
-    margin-right: 36px;
+    margin-right: 31px;
   }
   .header-login-item span,
 .header-menu__item_favorites span {
@@ -203,7 +203,7 @@
     border: 1px solid transparent;
   }
 }
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 300px) {
   .header-menu__left {
     margin-right: 0;
   }
@@ -1784,6 +1784,7 @@ a.basket-menu__link_lowercase {
 }
 
 .filters-list-small {
+  font-size: 14px;
   display: flex;
   text-transform: capitalize;
   margin-left: 30px;
@@ -4993,7 +4994,10 @@ ul.footer-top__list {
   }
 }
 @media screen and (max-width: 480px) {
-  .big-grid {
+  .big-grid .big-grid__item-double-center,
+.big-grid .big-grid__item-two-center-right,
+.big-grid .big-grid__item-two-center-left,
+.big-grid .big-grid__item-one-center {
     margin-left: -15px;
     margin-right: -15px;
     width: calc(100% + 30px);
@@ -5107,13 +5111,31 @@ ul.footer-top__list {
 .big-grid__item-four-left {
   grid-column: 3/11;
 }
+@media screen and (max-width: 480px) {
+  .big-grid__item-four-left {
+    border: 1px solid blue;
+    grid-column: 1/10;
+  }
+}
 
 .big-grid__item-four-center {
   grid-column: 11/19;
 }
+@media screen and (max-width: 480px) {
+  .big-grid__item-four-center {
+    border: 1px solid blue;
+    grid-column: 10/19;
+  }
+}
 
 .big-grid__item-four-right {
   grid-column: 19/27;
+}
+@media screen and (max-width: 480px) {
+  .big-grid__item-four-right {
+    border: 1px solid blue;
+    grid-column: 19/28;
+  }
 }
 
 .big-grid__item-three-one {
@@ -5123,6 +5145,12 @@ ul.footer-top__list {
 @media screen and (max-width: 600px) {
   .big-grid__item-three-one {
     grid-column: 3/15;
+  }
+}
+@media screen and (max-width: 480px) {
+  .big-grid__item-three-one {
+    border: 1px solid blue;
+    grid-column: 1/15;
   }
 }
 
@@ -5135,6 +5163,12 @@ ul.footer-top__list {
     grid-column: 15/27;
   }
 }
+@media screen and (max-width: 480px) {
+  .big-grid__item-three-two {
+    border: 1px solid blue;
+    grid-column: 15/29;
+  }
+}
 
 .big-grid__item-three-three {
   grid-column: 15/21;
@@ -5143,6 +5177,12 @@ ul.footer-top__list {
 @media screen and (max-width: 600px) {
   .big-grid__item-three-three {
     grid-column: 3/15;
+  }
+}
+@media screen and (max-width: 480px) {
+  .big-grid__item-three-three {
+    border: 1px solid blue;
+    grid-column: 1/15;
   }
 }
 
@@ -5155,6 +5195,12 @@ ul.footer-top__list {
     grid-column: 15/27;
   }
 }
+@media screen and (max-width: 480px) {
+  .big-grid__item-three-four {
+    border: 1px solid blue;
+    grid-column: 15/29;
+  }
+}
 
 .height-50 {
   height: 50%;
@@ -5165,6 +5211,32 @@ ul.footer-top__list {
 }
 .big-grid__item-double-center .catalog-item.w2 .slider-size {
   bottom: 85px;
+}
+.big-grid__item-double-center .catalog-item.w1 .catalog-item-photo-holder {
+  padding-top: 0;
+}
+.big-grid__item-double-center .catalog {
+  border: 1px solid green;
+}
+@media screen and (max-width: 480px) {
+  .big-grid__item-double-center .catalog {
+    border: 1px solid violet;
+  }
+  .big-grid__item-double-center .catalog .row {
+    margin: 0;
+  }
+  .big-grid__item-double-center .catalog .col-auto {
+    width: 100%;
+  }
+}
+.big-grid__item-double-center .catalog .title-block {
+  margin: 0;
+  margin-bottom: 15px;
+  text-align: left;
+}
+.big-grid__item-double-center .catalog .slider-arrows-wrap {
+  left: -40px;
+  right: -40px;
 }
 
 @media screen and (max-width: 480px) {
